Added simple tool to dump DICOM file contents

--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -9,6 +9,12 @@ target_include_directories(
         ${CMAKE_CURRENT_LIST_DIR}
 )
 
+target_link_libraries(
+    ${PROJECT_NAME}
+
+    dcmcpp
+)
+
 include(Dump/CMakeLists.txt)
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "apps")
