--- a/src/libs/Dicom/CMakeLists.txt
+++ b/src/libs/Dicom/CMakeLists.txt
@@ -8,6 +8,7 @@ target_sources(
         "${CMAKE_CURRENT_LIST_DIR}/Dataset.h"
         "${CMAKE_CURRENT_LIST_DIR}/Date.h"
         "${CMAKE_CURRENT_LIST_DIR}/DateTime.h"
+        "${CMAKE_CURRENT_LIST_DIR}/DecimalString.h"
         "${CMAKE_CURRENT_LIST_DIR}/File.h"
         "${CMAKE_CURRENT_LIST_DIR}/FileMetaInfo.h"
         "${CMAKE_CURRENT_LIST_DIR}/IntegerString.h"
@@ -21,6 +22,7 @@ target_sources(
         "${CMAKE_CURRENT_LIST_DIR}/Time.h"
         "${CMAKE_CURRENT_LIST_DIR}/UniqueIdentifier.h"
         "${CMAKE_CURRENT_LIST_DIR}/UnlimitedText.h"
+        "${CMAKE_CURRENT_LIST_DIR}/UnsignedShort.h"
         "${CMAKE_CURRENT_LIST_DIR}/UnsignedLong.h"
         "${CMAKE_CURRENT_LIST_DIR}/ValueLength.h"
         "${CMAKE_CURRENT_LIST_DIR}/ValueRepresentation.h"
