Extracted function template to read an integral from a little endian stream

--- a/test/unit/Utils/CMakeLists.txt
+++ b/test/unit/Utils/CMakeLists.txt
@@ -3,5 +3,7 @@ target_sources(
 
     PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/LittleEndianTests.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/LittleEndianStreamReaderTests.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/StreamUtilsTests.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/StringUtilsTests.cpp"
 )
