--- a/src/libs/Utils/CMakeLists.txt
+++ b/src/libs/Utils/CMakeLists.txt
@@ -4,8 +4,11 @@ target_sources(
     PUBLIC
         "${CMAKE_CURRENT_LIST_DIR}/Notification.h"
         "${CMAKE_CURRENT_LIST_DIR}/LittleEndian.h"
+        "${CMAKE_CURRENT_LIST_DIR}/LittleEndianStreamReader.h"
+        "${CMAKE_CURRENT_LIST_DIR}/StreamUtils.h"
         "${CMAKE_CURRENT_LIST_DIR}/StringUtils.h"
 
     PRIVATE
+        "${CMAKE_CURRENT_LIST_DIR}/StreamUtils.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/StringUtils.cpp"
 )
