--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,5 +25,16 @@ if (MSVC_VERSION GREATER_EQUAL "1900")
     endif()
 endif()
 
+# force highest warning level
+if(MSVC)
+  if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
+    string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+  else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
+  endif()
+elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long -pedantic -Werror")
+endif()
+
 add_subdirectory(src)
 add_subdirectory(test)
