--- a/test/unit/Dicom/CMakeLists.txt
+++ b/test/unit/Dicom/CMakeLists.txt
@@ -4,4 +4,5 @@ target_sources(
     PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/TagTests.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/UniqueIdentifierTests.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/ValueLengthTests.cpp"
 )
