--- a/ci/.appveyor.yml
+++ b/ci/.appveyor.yml
@@ -39,5 +39,6 @@ build_script:
   - mkdir build
   - cd build
   - conan install .. --build=missing -s compiler="Visual Studio" -s compiler.version=15 -s build_type=Debug -s arch=x86_64 -s os=Windows
-  - cmake .. -G "Visual Studio 15 2017 Win64"
+  - cmake .. -G "Visual Studio 15 2017 Win64" -DCMAKE_INSTALL_PREFIX:PATH="C:\projects\dcmcpp\install"
   - cmake --build . --config Debug
+  - cmake --build . --target INSTALL
