--- a/src/libs/Utils/CMakeLists.txt
+++ b/src/libs/Utils/CMakeLists.txt
@@ -14,4 +14,4 @@ target_sources(
         "${CMAKE_CURRENT_LIST_DIR}/StringUtils.cpp"
 )
 
-install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR} DESTINATION include FILES_MATCHING PATTERN "*.h")
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR} DESTINATION include/${PROJECT_NAME} FILES_MATCHING PATTERN "*.h")
