Restructured repo structure

--- a/src/libs/Dicom/CMakeLists.txt
+++ b/src/libs/Dicom/CMakeLists.txt
@@ -1,44 +1,34 @@
+set(DICOM_INCLUDE_DIR ${INCLUDE_DIR}/dcmcpp/Dicom)
+
 target_sources(
     ${PROJECT_NAME}
 
-    PUBLIC
-        "${CMAKE_CURRENT_LIST_DIR}/ApplicationEntity.h"
-        "${CMAKE_CURRENT_LIST_DIR}/CodeString.h"
-        "${CMAKE_CURRENT_LIST_DIR}/DataElement.h"
-        "${CMAKE_CURRENT_LIST_DIR}/Dataset.h"
-        "${CMAKE_CURRENT_LIST_DIR}/Date.h"
-        "${CMAKE_CURRENT_LIST_DIR}/DateTime.h"
-        "${CMAKE_CURRENT_LIST_DIR}/DecimalString.h"
-        "${CMAKE_CURRENT_LIST_DIR}/Dictionary.h"
-        "${CMAKE_CURRENT_LIST_DIR}/File.h"
-        "${CMAKE_CURRENT_LIST_DIR}/FileMetaInfo.h"
-        "${CMAKE_CURRENT_LIST_DIR}/IntegerString.h"
-        "${CMAKE_CURRENT_LIST_DIR}/LongString.h"
-        "${CMAKE_CURRENT_LIST_DIR}/OtherByte.h"
-        "${CMAKE_CURRENT_LIST_DIR}/OtherWord.h"
-        "${CMAKE_CURRENT_LIST_DIR}/PersonName.h"
-        "${CMAKE_CURRENT_LIST_DIR}/Sequence.h"
-        "${CMAKE_CURRENT_LIST_DIR}/ShortString.h"
-        "${CMAKE_CURRENT_LIST_DIR}/ShortText.h"
-        "${CMAKE_CURRENT_LIST_DIR}/Tag.h"
-        "${CMAKE_CURRENT_LIST_DIR}/Time.h"
-        "${CMAKE_CURRENT_LIST_DIR}/TransferSyntax.h"
-        "${CMAKE_CURRENT_LIST_DIR}/UniqueIdentifier.h"
-        "${CMAKE_CURRENT_LIST_DIR}/UnlimitedText.h"
-        "${CMAKE_CURRENT_LIST_DIR}/UnsignedShort.h"
-        "${CMAKE_CURRENT_LIST_DIR}/UnsignedLong.h"
-        "${CMAKE_CURRENT_LIST_DIR}/ValueLength.h"
-        "${CMAKE_CURRENT_LIST_DIR}/ValueRepresentation.h"
-
     PRIVATE
-        "${CMAKE_CURRENT_LIST_DIR}/DataElement.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Dataset.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/File.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/FileMetaInfo.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Tag.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/UniqueIdentifier.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/ValueLength.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/ValueRepresentation.cpp"
+        "${DICOM_INCLUDE_DIR}/ApplicationEntity.h"
+        "${DICOM_INCLUDE_DIR}/CodeString.h"
+        "${DICOM_INCLUDE_DIR}/DataElement.h" "${CMAKE_CURRENT_LIST_DIR}/DataElement.cpp"
+        "${DICOM_INCLUDE_DIR}/Dataset.h" "${CMAKE_CURRENT_LIST_DIR}/Dataset.cpp"
+        "${DICOM_INCLUDE_DIR}/Date.h"
+        "${DICOM_INCLUDE_DIR}/DateTime.h"
+        "${DICOM_INCLUDE_DIR}/DecimalString.h"
+        "${DICOM_INCLUDE_DIR}/Dictionary.h"
+        "${DICOM_INCLUDE_DIR}/File.h" "${CMAKE_CURRENT_LIST_DIR}/File.cpp"
+        "${DICOM_INCLUDE_DIR}/FileMetaInfo.h" "${CMAKE_CURRENT_LIST_DIR}/FileMetaInfo.cpp"
+        "${DICOM_INCLUDE_DIR}/IntegerString.h"
+        "${DICOM_INCLUDE_DIR}/LongString.h"
+        "${DICOM_INCLUDE_DIR}/OtherByte.h"
+        "${DICOM_INCLUDE_DIR}/OtherWord.h"
+        "${DICOM_INCLUDE_DIR}/PersonName.h"
+        "${DICOM_INCLUDE_DIR}/Sequence.h"
+        "${DICOM_INCLUDE_DIR}/ShortString.h"
+        "${DICOM_INCLUDE_DIR}/ShortText.h"
+        "${DICOM_INCLUDE_DIR}/Tag.h" "${CMAKE_CURRENT_LIST_DIR}/Tag.cpp"
+        "${DICOM_INCLUDE_DIR}/Time.h"
+        "${DICOM_INCLUDE_DIR}/TransferSyntax.h"
+        "${DICOM_INCLUDE_DIR}/UniqueIdentifier.h" "${CMAKE_CURRENT_LIST_DIR}/UniqueIdentifier.cpp"
+        "${DICOM_INCLUDE_DIR}/UnlimitedText.h"
+        "${DICOM_INCLUDE_DIR}/UnsignedShort.h"
+        "${DICOM_INCLUDE_DIR}/UnsignedLong.h"
+        "${DICOM_INCLUDE_DIR}/ValueLength.h" "${CMAKE_CURRENT_LIST_DIR}/ValueLength.cpp"
+        "${DICOM_INCLUDE_DIR}/ValueRepresentation.h" "${CMAKE_CURRENT_LIST_DIR}/ValueRepresentation.cpp"
 )
-
-install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR} DESTINATION include/${PROJECT_NAME} FILES_MATCHING PATTERN "*.h")
