--- a/test/benchmarks/CMakeLists.txt
+++ b/test/benchmarks/CMakeLists.txt
@@ -10,7 +10,7 @@ target_link_libraries(
     CONAN_PKG::google-benchmark
 )
 
-include(Dicom/CMakeLists.txt)
-include(Utils/CMakeLists.txt)
+include(${CMAKE_CURRENT_LIST_DIR}/Dicom/CMakeLists.txt)
+include(${CMAKE_CURRENT_LIST_DIR}/Utils/CMakeLists.txt)
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "tests")
