--- a/src/libs/Utils/CMakeLists.txt
+++ b/src/libs/Utils/CMakeLists.txt
@@ -1,17 +1,12 @@
+set(UTILS_INCLUDE_DIR ${INCLUDE_DIR}/dcmcpp/Utils)
+
 target_sources(
     ${PROJECT_NAME}
 
-    PUBLIC
-        "${CMAKE_CURRENT_LIST_DIR}/Notification.h"
-        "${CMAKE_CURRENT_LIST_DIR}/LittleEndian.h"
-        "${CMAKE_CURRENT_LIST_DIR}/LittleEndianStreamReader.h"
-        "${CMAKE_CURRENT_LIST_DIR}/StreamUtils.h"
-        "${CMAKE_CURRENT_LIST_DIR}/StringUtils.h"
-
     PRIVATE
-        "${CMAKE_CURRENT_LIST_DIR}/LittleEndianStreamReader.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/StreamUtils.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/StringUtils.cpp"
+        "${UTILS_INCLUDE_DIR}/Notification.h"
+        "${UTILS_INCLUDE_DIR}/LittleEndian.h"
+        "${UTILS_INCLUDE_DIR}/LittleEndianStreamReader.h" "${CMAKE_CURRENT_LIST_DIR}/LittleEndianStreamReader.cpp"
+        "${UTILS_INCLUDE_DIR}/StreamUtils.h" "${CMAKE_CURRENT_LIST_DIR}/StreamUtils.cpp"
+        "${UTILS_INCLUDE_DIR}/StringUtils.h" "${CMAKE_CURRENT_LIST_DIR}/StringUtils.cpp"
 )
-
-install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR} DESTINATION include/${PROJECT_NAME} FILES_MATCHING PATTERN "*.h")
