--- a/test/integration/Dicom/CMakeLists.txt
+++ b/test/integration/Dicom/CMakeLists.txt
@@ -4,3 +4,6 @@ target_sources(
     PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/FileTests.cpp"
 )
+
+include(CreateSubfolders)
+CreateSubfolders("Dicom")
