--- a/test/unit/Dicom/CMakeLists.txt
+++ b/test/unit/Dicom/CMakeLists.txt
@@ -6,3 +6,6 @@ target_sources(
         "${CMAKE_CURRENT_LIST_DIR}/UniqueIdentifierTests.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/ValueLengthTests.cpp"
 )
+
+include(CreateSubfolders)
+CreateSubfolders("Dicom")
